@@ -17,21 +17,6 @@ using namespace std;
 #include "date.h"
 
 
-// directory reading/writing encapsulated for compatibility
-// fixme: maybe put that in an filetool.h/.cpp
-#ifdef WIN32
-// fixme: win32 port
-#else
-#include <dirent.h>
-typedef DIR* directory;
-#endif
-// implement these system dependent functions in global_data.cpp
-directory open_dir(const string& filename);	// returns 0 if directory doesn't exist
-string read_dir(directory d);	// returns empty string if directory is fully read.
-void close_dir(directory d);
-bool make_dir(const string& dirname);	// returns true on success
-string get_current_directory(void);	// return absolute path
-
 
 inline string get_data_dir(void) { return DATADIR; }
 inline string get_texture_dir(void) { return get_data_dir() + "textures/"; }
